[package]
name = "vexup"
version = "0.1.0"
edition = "2024"

[dependencies]
vex-v5-serial = { path = "crates/vex-v5-serial" }
tokio = { version = "1.36", features = ["full"] }
tokio-serial = "5"

axum = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"